Removing margin fixes link spacing problems

--- a/src/stylesheets/sketch.scss
+++ b/src/stylesheets/sketch.scss
@@ -47,6 +47,7 @@ body, body * {
 
 /* tag overrides */
 a {
+  margin: 0;
   padding: (0.125 * $spacing) (0.25 * $spacing) !important;
   display:inline-block;
   @include rounded();
